--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         </div>
     </div>
-    <script src="/app.js"></script>
+    <script src="/HardStrengthGym/app.js"></script>
 </body>
 
 </html>
