--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
 
             <footer>
-                <p>Copyright &copy; 2020 TacoMint IT Services - Designed By <span class="span"><a href="#" class="footername">RitvikSakpal</a></span></p>
+                <p>Copyright &copy; 2020 TacoMint IT Services - Designed & Developed By <span class="span"><a href="#" class="footername">RitvikSakpal</a></span></p>
             </footer>
 
         </div>
