--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
                 <ul class="navframes">
                     <li><a class="active" href="">HOME</a></li>
-                    <li><a href="">PROGRAMS</a></li>
-                    <li><a href="">SCHEDULES</a></li>
-                    <li><a href="">TRAINERS</a></li>
-                    <li><a href="">CONTACT US</a></li>
+                    <li><a href="#progsec">PROGRAMS</a></li>
+                    <li><a href="#schedule">SCHEDULES</a></li>
+                    <li><a href="#trainers">TRAINERS</a></li>
+                    <li><a href="#contacts">CONTACT US</a></li>
+
                     <button id="signup" type="submit">SIGN UP</button>
                 </ul>
                 <div class="burger">
