--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HSGym</title>
-    <link rel="stylesheet" href="/HardStrengthGym/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 </head>
 
 <body>
+    <a id="topbtn" href="#navbar">TOP</a>
     <div id="container">
         <div id="top">
             <div id="navbar">
@@ -21,7 +22,6 @@
                     <li><a href="#schedule">SCHEDULES</a></li>
                     <li><a href="#trainers">TRAINERS</a></li>
                     <li><a href="#contacts">CONTACT US</a></li>
-
                     <button id="signup" type="submit">SIGN UP</button>
                 </ul>
                 <div class="burger">
@@ -44,7 +44,7 @@
                 <div id="programs">
                     <div class="row">
                         <div class="prog">
-                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">BASIC FITNESS</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -52,7 +52,7 @@
                             </div>
                         </div>
                         <div class="prog">
-                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">ADVANCE MUSCLE COURSE</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="row">
                         <div class="prog">
-                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">NEW CARDIO TRAINING</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="prog">
-                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">ZUMBA SESSION</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="row">
                         <div class="prog">
-                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">BASIC MUSCLE COURSE</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                         <div class="prog">
-                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">NEW YOGA SESSIONS</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -117,29 +117,29 @@
                 <div id="slot">
                     <div id="slottimes">
                         <div class="slotoptions">
-                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
+                            <img src="/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">06AM to 08AM</a></p>
                         </div>
                         <div class="slotoptions">
-                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
+                            <img src="/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">09AM to 12PM</a></p>
                         </div>
                         <div class="slotoptions">
-                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
+                            <img src="/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">04PM to 06PM</a></p>
                         </div>
                         <div class="slotoptions">
-                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
+                            <img src="/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">07PM to 09PM</a></p>
                         </div>
                         <div class="slotoptions">
-                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
+                            <img src="/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">10PM to 12AM</a></p>
                         </div>
                         <button class="schedulebtn" type="submit">VIEW ALL SCHEDULES</button>
                     </div>
                     <div id="scheduleslot">
-                        <img src="/HardStrengthGym/img/sceduleimg.jpg" alt="">
+                        <img src="/img/sceduleimg.jpg" alt="">
                         <p id="slotheading">We've fix schedule as your convinience</p>
                         <p id="slotsubheadin">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsam aspernatur earum iste temporibus atque nesciunt dolorum a aliquid, nam nulla error nobis laudantium quo quae eveniet commodi. Animi tempore autem alias a voluptatum
                             omnis impedit perferendis dolores corporis fugit?</p>
@@ -163,7 +163,7 @@
 
                 <div id="card">
                     <div class="card">
-                        <img src="/HardStrengthGym/img/trainer3.jpg" alt="">
+                        <img src="/img/trainer3.jpg" alt="">
                         <p class="position">Strength Trainer</p>
                         <p class="name">Bet Powers</p>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, assumenda delectus? Odit quis autem saepe.</p>
@@ -175,7 +175,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="/HardStrengthGym/img/trainer2.jpg" alt="">
+                        <img src="/img/trainer2.jpg" alt="">
                         <p class="position">Muscle Trainer</p>
                         <p class="name">Stacy Williams</p>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, assumenda delectus? Odit quis autem saepe.</p>
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="/HardStrengthGym/img/trainer3.jpg" alt="">
+                        <img src="/img/trainer3.jpg" alt="">
                         <p class="position">Cardio Trainer</p>
                         <p class="name">Steve Herman</p>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, assumenda delectus? Odit quis autem saepe.</p>
@@ -235,12 +235,12 @@
             </div>
 
             <footer>
-                <p>Copyright &copy; 2020 Ritvik Sakpal - Designed & Developed By <span class="span"><a href="#" class="footername">RitvikSakpal</a></span></p>
+                <p>Copyright &copy; 2020 TacoMint IT Services - Designed By <span class="span"><a href="#" class="footername">RitvikSakpal</a></span></p>
             </footer>
 
         </div>
     </div>
-    <script src="/HardStrengthGym/app.js"></script>
+    <script src="/app.js"></script>
 </body>
 
 </html>
