--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
         </div>
     </div>
-    <script src="/app.js"></script>
+       <script src="/HardStrengthGym/app.js"></script>
 </body>
 
 </html>
