--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </div>
 
             <footer>
-                <p>Copyright &copy; 2020 TacoMint IT Services - Designed By <span class="span"><a href="#" class="footername">RitvikSakpal</a></span></p>
+                <p>Copyright &copy; 2020 Ritvik Sakpal - Designed and Developed By <span class="span"><a href="#" class="footername">RitvikSakpal</a></span></p>
             </footer>
 
         </div>
