--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div id="programs">
                     <div class="row">
                         <div class="prog">
-                            <img src="/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">BASIC FITNESS</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="prog">
-                            <img src="/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">ADVANCE MUSCLE COURSE</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="row">
                         <div class="prog">
-                            <img src="/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">NEW CARDIO TRAINING</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                         <div class="prog">
-                            <img src="/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">ZUMBA SESSION</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="row">
                         <div class="prog">
-                            <img src="/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">BASIC MUSCLE COURSE</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div class="prog">
-                            <img src="/img/dumbbell.jpg" alt="" srcset="">
+                            <img src="/HardStrengthGym/img/dumbbell.jpg" alt="" srcset="">
                             <div class="details">
                                 <p class="progheading">NEW YOGA SESSIONS</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, nostrum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, autem!</p>
@@ -118,29 +118,29 @@
                 <div id="slot">
                     <div id="slottimes">
                         <div class="slotoptions">
-                            <img src="/img/dumbbell2.jpg" alt="">
+                            <img src="/HardStrengthGym/HardStrengthGym/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">06AM to 08AM</a></p>
                         </div>
                         <div class="slotoptions">
-                            <img src="/img/dumbbell2.jpg" alt="">
+                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">09AM to 12PM</a></p>
                         </div>
                         <div class="slotoptions">
-                            <img src="/img/dumbbell2.jpg" alt="">
+                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">04PM to 06PM</a></p>
                         </div>
                         <div class="slotoptions">
-                            <img src="/img/dumbbell2.jpg" alt="">
+                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">07PM to 09PM</a></p>
                         </div>
                         <div class="slotoptions">
-                            <img src="/img/dumbbell2.jpg" alt="">
+                            <img src="/HardStrengthGym/img/dumbbell2.jpg" alt="">
                             <p> <a href="#">10PM to 12AM</a></p>
                         </div>
                         <button class="schedulebtn" type="submit">VIEW ALL SCHEDULES</button>
                     </div>
                     <div id="scheduleslot">
-                        <img src="/img/sceduleimg.jpg" alt="">
+                        <img src="/HardStrengthGym/img/sceduleimg.jpg" alt="">
                         <p id="slotheading">We've fix schedule as your convinience</p>
                         <p id="slotsubheadin">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsam aspernatur earum iste temporibus atque nesciunt dolorum a aliquid, nam nulla error nobis laudantium quo quae eveniet commodi. Animi tempore autem alias a voluptatum
                             omnis impedit perferendis dolores corporis fugit?</p>
@@ -164,7 +164,7 @@
 
                 <div id="card">
                     <div class="card">
-                        <img src="/img/trainer3.jpg" alt="">
+                        <img src="/HardStrengthGym/img/trainer3.jpg" alt="">
                         <p class="position">Strength Trainer</p>
                         <p class="name">Bet Powers</p>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, assumenda delectus? Odit quis autem saepe.</p>
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="/img/trainer2.jpg" alt="">
+                        <img src="/HardStrengthGym/img/trainer2.jpg" alt="">
                         <p class="position">Muscle Trainer</p>
                         <p class="name">Stacy Williams</p>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, assumenda delectus? Odit quis autem saepe.</p>
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="/img/trainer3.jpg" alt="">
+                        <img src="/HardStrengthGym/img/trainer3.jpg" alt="">
                         <p class="position">Cardio Trainer</p>
                         <p class="name">Steve Herman</p>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, assumenda delectus? Odit quis autem saepe.</p>
